<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtUsuario"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/usuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenha"
        android:layout_marginTop="46dp"
        android:hint="@string/senha"
        android:layout_below="@+id/edtUsuario"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/btnEntrar"
        android:layout_below="@+id/edtSenha"
        android:layout_alignLeft="@+id/edtSenha"
        android:layout_alignStart="@+id/edtSenha"
        android:layout_marginTop="50dp"
        android:onClick="btnEntrarClick"
        android:textColor="#ff179625" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/btnRegistrar"
        android:layout_alignTop="@+id/btnEntrar"
        android:layout_alignRight="@+id/edtSenha"
        android:layout_alignEnd="@+id/edtSenha"
        android:onClick="btnRegistroClick"
        android:textColor="#ff179625" />

</RelativeLayout>
