<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.greeningu.NovaPostagemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtTituloPostagem"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="49dp"
                android:hint="@string/titulo_postagem" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edtDescricaoPostagem"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/edtTituloPostagem"
                android:layout_alignLeft="@+id/edtTituloPostagem"
                android:layout_alignStart="@+id/edtTituloPostagem"
                android:hint="@string/descricao_postagem" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecionar_imagem"
                android:id="@+id/btnSelecionarImagem"
                android:layout_below="@+id/edtDescricaoPostagem"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="btnSelecionarImagemClick"
                android:textColor="#ff179625" />


            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/ivImagemPostagem"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/btnSelecionarImagem"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:id="@+id/btnSend"
                android:layout_below="@+id/ivImagemPostagem"
                android:layout_centerHorizontal="true"
                android:onClick="btnEnviarClick"
                android:textColor="#ff179625" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
