<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    android:id="@+id/rlHome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" ? "
                android:id="@+id/username"
                android:textColor="#ff179625"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_below="@+id/txtSaudacao"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/voce_ja_fez"
                android:id="@+id/textView"
                android:textColor="#ff179625"
                android:textSize="20dp"
                android:layout_alignTop="@+id/qtdePosts"
                android:layout_toLeftOf="@+id/txtPontuacao"
                android:layout_toStartOf="@+id/txtPontuacao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" ? "
                android:id="@+id/qtdePosts"
                android:textColor="#ff179625"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_below="@+id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/postagem_s"
                android:id="@+id/textView2"
                android:layout_alignTop="@+id/qtdePosts"
                android:layout_toRightOf="@+id/qtdePosts"
                android:layout_toEndOf="@+id/qtdePosts"
                android:textColor="#ff179625"
                android:layout_marginLeft="10dp"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pontuacao"
                android:id="@+id/textView5"
                android:textColor="#ff179625"
                android:textSize="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" ? "
                android:id="@+id/txtPontuacao"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textSize="50dp"
                android:textColor="#ff179625" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" ? "
                android:id="@+id/txtSaudacao"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="#ff179625"
                android:textSize="25dp" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
